# seasonal-anime-command-line-tool

./: Cargo.toml  README.md
src/: fetch.rs  main.rs  types.rs
