[package]
name = "seasonal-anime-command-line-tool"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.152"
serde_json = "1.0.93"
serde_derive = "1.0.152"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.0", features = ["json"] }
tabled = "0.10.0"

